--- a/server/app/config/routing.yml
+++ b/server/app/config/routing.yml
@@ -1,6 +1,8 @@
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+    defaults:
+        _format: json
 
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
